--- a/index.html
+++ b/index.html
@@ -9,21 +9,32 @@
 <body>
     <header>
         <h1>Welcome to My Portfolio</h1>
+        <nav>
+            <ul>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
     </header>
-    <section>
+    <section id="about">
         <h2>About Me</h2>
-        <p>Brief introduction about yourself.</p>
+        <p>Hi, I'm [Your Name], a passionate coder with experience in [Your Skills].</p>
     </section>
-    <section>
+    <section id="projects">
         <h2>Projects</h2>
         <ul>
-            <li><a href="#">Project 1</a></li>
-            <li><a href="#">Project 2</a></li>
-            <li><a href="#">Project 3</a></li>
+            <li><a href="#">Project 1</a> - Description of project 1.</li>
+            <li><a href="#">Project 2</a> - Description of project 2.</li>
+            <li><a href="#">Project 3</a> - Description of project 3.</li>
         </ul>
     </section>
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Email: your.email@example.com</p>
+    </section>
     <footer>
-        <p>Contact: your.email@example.com</p>
+        <p>&copy; 2024 [Your Name]. All rights reserved.</p>
     </footer>
 </body>
 </html>
